调整界面和下拉刷新，上拉逻辑

--- a/JiaoBaoYun-hb/html/cloud/app_keeprecord.html
+++ b/JiaoBaoYun-hb/html/cloud/app_keeprecord.html
@@ -66,8 +66,7 @@
 
 			.keep-box-shadow-border {
 				/*边框和阴影*/
-				box-shadow: 0px 1px 5px #888888;
-				/*border: 1px solid #F2F2F2;*/
+				box-shadow: 0px 1px 5px rgba(136,136,136,0.5);
 				padding: 3px;
 			}
 
