--- a/JiaoBaoYun-hb/html/cloud/app_notes_main.html
+++ b/JiaoBaoYun-hb/html/cloud/app_notes_main.html
@@ -197,14 +197,8 @@
 						console.log('up ' + JSON.stringify(page));
 						if(page) {
 							requestData(page.pageIndex + 1);
-							setTimeout(function() {
-								self.endPullUpToRefresh();
-							}, 1000);
 						} else {
 							mui.toast('数据异常，请下拉刷新后重新尝试');
-							setTimeout(function() {
-								self.endPullUpToRefresh();
-							}, 1000);
 						}
 					}
 				}
@@ -273,11 +267,13 @@
 					page.totalPage = data.RspData.TotalPage;
 				}
 				document.getElementById('pullrefresh').setAttribute('data-page', JSON.stringify(page))
-				if(page.pageIndex == 1) { //获取的第一页的内容
+				if(page.pageIndex == 1) { //下拉刷新或者获取的第一页的内容
 					//清空对应的界面
 					document.getElementById('list').innerHTML = '';
 					year = ''; //清空年份
 					markDate = ''; //日期
+				} else { //上拉加载更多
+					pullRefresh.endPullUpToRefresh(); //结束上拉加载更多
 				}
 
 				if(data.RspCode == 0) {
@@ -293,8 +289,10 @@
 					mui.toast(data.RspTxt);
 				}
 
+				console.log('page ' + JSON.stringify(page));
 				if(page.pageIndex >= page.totalPage) {
 					//没有下一页
+					console.log('没有下一页');
 					pullRefresh.endPullUpToRefresh(true);
 				} else {
 					if(page.pageIndex == 1) {
