--- a/JiaoBaoYun-hb/html/cloud/keeprecord_history_0.html
+++ b/JiaoBaoYun-hb/html/cloud/keeprecord_history_0.html
@@ -192,14 +192,8 @@
 							console.log('up ' + JSON.stringify(page));
 							if(page) {
 								getClassHistory(page.pageIndex + 1, 10);
-								setTimeout(function() {
-									self.endPullUpToRefresh();
-								}, 1000);
 							} else {
 								mui.toast('数据异常，请下拉刷新后重新尝试');
-								setTimeout(function() {
-									self.endPullUpToRefresh();
-								}, 1000);
 							}
 						}
 					}
@@ -254,10 +248,12 @@
 						page.totalPage = data.RspData.TotalPage;
 					}
 					document.getElementById('data_scroll').setAttribute('data-page', JSON.stringify(page))
-					if(pageIndex == 1) { //获取的第一页的内容
+					if(pageIndex == 1) { //下拉刷新或者获取的第一页的内容
 						//清空对应的界面
 						document.getElementById('data_scroll').innerHTML = '';
-						markDate = '';
+						markDate = '';//日期
+					} else { //上拉加载更多
+						pullRefresh.endPullUpToRefresh(); //结束上拉加载更多
 					}
 
 					if(data.RspCode == 0) {
