--- a/JiaoBaoYun-hb/html/qiuzhi/experts_main.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/experts_main.html
@@ -155,6 +155,8 @@
 				/*已被邀请按钮*/
 				background-color: #d4d4d4;
 				border: 1px solid #d4d4d4;
+				padding-top: 3px;
+				padding-bottom: 3px;
 			}
 
 			.expert-usernote {
