--- a/JiaoBaoYun-hb/html/quan/studentdynamic_main.html
+++ b/JiaoBaoYun-hb/html/quan/studentdynamic_main.html
@@ -218,14 +218,8 @@
 						console.log('up ' + JSON.stringify(page));
 						if(page) {
 							getNotes(page.pageIndex + 1);
-							setTimeout(function() {
-								self.endPullUpToRefresh();
-							}, 1000);
 						} else {
 							mui.toast('数据异常，请下拉刷新后重新尝试');
-							setTimeout(function() {
-								self.endPullUpToRefresh();
-							}, 1000);
 						}
 					}
 				}
@@ -307,7 +301,7 @@
 						page.totalPage = data.RspData.TotalPage;
 					}
 					document.getElementById('pullrefresh').setAttribute('data-page', JSON.stringify(page))
-					if(page.pageIndex == 1) { //获取的第一页的内容
+					if(page.pageIndex == 1) { //下拉刷新或者获取的第一页的内容
 						//清空对应的界面
 						document.getElementById('ul_table').innerHTML = '';
 						year = ''; //清空年份
@@ -323,6 +317,8 @@
 							if(data.RspCode == 0) {}
 						});
 						wd2.close();
+					} else { //上拉加载更多
+						pullRefresh.endPullUpToRefresh(); //结束上拉加载更多
 					}
 
 					for(var i = 0; i < tempRspData.length; i++) {
