申请和审核为单选

--- a/JiaoBaoYun-hb/html/mine/approval-apply.html
+++ b/JiaoBaoYun-hb/html/mine/approval-apply.html
@@ -35,15 +35,15 @@
 				<fieldset id="">
 					<legend>选择身份:</legend>
 					<div class="div-chose">
-						<input id="check-parents" name="checkbox1" type="checkbox" value="0">
+						<input id="check-parents" name="checkbox1" type="radio" value="0">
 						<label>家长</label>
 					</div>
 					<div class="div-chose">
-						<input id="check-tea" name="checkbox1" type="checkbox" value="2">
+						<input id="check-tea" name="checkbox1" type="radio" value="2">
 						<label>老师</label>
 					</div>
 					<div class="div-chose">
-						<input id="check-stu" name="checkbox1" type="checkbox" value="3">
+						<input id="check-stu" name="checkbox1" type="radio" value="3">
 						<label>学生</label>
 					</div>
 					<div class="buttons">
