--- a/JiaoBaoYun-hb/html/qiuzhi/atExpert.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/atExpert.html
@@ -35,26 +35,28 @@
 		</div>
 		<script type="text/javascript">
 			var datasource;
-			mui.plusReady(function(){
+			var selectedExpert=[]
+			mui.plusReady(function() {
 				datasource = plus.webview.currentWebview().data;
-			console.log('获取的数据：' + JSON.stringify(datasource));
-			addExperts();
-			events.addTap('publish', function() {
-				var box = document.getElementsByClassName('checkbox');
-				var selectedBoxes = [];
-				for(var i = 0; i < box.length; i++) {
-					if(box[i].checked) {
+				selectedExpert = plus.webview.currentWebview().selectedExpert
+				console.log('获取的数据：' + JSON.stringify(datasource));
+				console.log('选择的专家：' + JSON.stringify(selectedExpert));
+				addExperts();
+				events.addTap('publish', function() {
+					var box = document.getElementsByClassName('checkbox');
+					var selectedBoxes = [];
+					for(var i = 0; i < box.length; i++) {
+						if(box[i].checked) {
 
-						selectedBoxes.push(datasource[box[i].value]);
+							selectedBoxes.push(datasource[box[i].value]);
+						}
 					}
-				}
-				var boxesStr = arrayToStr(selectedBoxes)
-				console.log(JSON.stringify(selectedBoxes));
-				events.fireToPageWithData('qiuzhi-newQ.html', 'atExpert', selectedBoxes);
-//				mui.back();
+					var boxesStr = arrayToStr(selectedBoxes)
+					console.log(JSON.stringify(selectedBoxes));
+					events.fireToPageWithData('qiuzhi-newQ.html', 'atExpert', selectedBoxes);
+					//				mui.back();
+				})
 			})
-			})
-			
 
 			function addExperts() {
 				var ul = document.getElementById("ExpertList");
@@ -67,21 +69,21 @@
 						'<img class="mui-media-object mui-pull-left" style = "width:50px;height:43px;border-radius: 50%;" src="' + updateHeadImg(datasource[i].uimg, 2) + '">' +
 						'<div class="mui-media-body">' +
 						events.shortForString(datasource[i].unick, 12) + '<font style="color:gray"> 回答数:<span style="color:red">' + datasource[i].AnswerNum + '</span>' +
-						'</font><p class="mui-ellipsis">' +events.shortForString(datasource[i].UserNote, 18)  + '</p></div>' +
+						'</font><p class="mui-ellipsis">' + events.shortForString(datasource[i].UserNote, 18) + '</p></div>' +
 						'<div class="mui-checkbox" style="float:right;">' +
 						'<input class = "checkbox" value="' + i + '" type="checkbox" style="margin-top: -37px;">' +
 						'</div>'
 					ul.appendChild(li);
 				}
-				//					if(flag == 1) {
-				//						var box = document.getElementsByClassName('checkbox');
-				//						for(var i = 0; i < box.length; i++) {
-				//							if(datasource[i].UserId == seletedID) {
-				//								box[i].checked = true;
-				//							}
-				//
-				//						}
-				//					}
+				var box = document.getElementsByClassName('checkbox');
+				for(var i = 0; i < box.length; i++) {
+					console.log(datasource[i].UserId+"------"+selectedExpert)
+					for(var j=0;j<selectedExpert.length;j++)
+					if(datasource[i].TabId == selectedExpert[j]) {
+						box[i].checked = true;
+					}
+
+				}
 
 			}
 		</script>
