--- a/JiaoBaoYun-hb/html/qiuzhi/focus-question.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/focus-question.html
@@ -100,6 +100,11 @@
 			.mui-slider-indicator.mui-segmented-control {
 				background-color: #efeff4;
 			}
+			
+			.mui-content,
+			.mui-table-view {
+				background-color: transparent
+			}
 		</style>
 	</head>
 
