--- a/JiaoBaoYun-hb/html/utils/refreshTest.html
+++ b/JiaoBaoYun-hb/html/utils/refreshTest.html
@@ -37,8 +37,8 @@
 			var ExpertsInfo; //专家详细页传来的 专家信息
 			var pageIndex = 1; //请求数据页面
 			var totalPageCount; //总页码
-			var flagRef = 0;//是刷新0，还是加载更多1
-			var answerArray = [];//回答总数组
+			var flagRef = 0; //是刷新0，还是加载更多1
+			var answerArray = []; //回答总数组
 
 			mui.init();
 
@@ -47,11 +47,19 @@
 				window.addEventListener('qiuzhi-expertAllAnswer', function(event) {
 					//赋值
 					ExpertsInfo = event.detail.data;
-					console.log('专家回答页传值：'+JSON.stringify(ExpertsInfo));
+					console.log('专家回答页传值：' + JSON.stringify(ExpertsInfo));
 					//清除节点
 					document.getElementById('list-container').innerHTML = "";
 					//24.获取某个用户的回答列表
 					getAnswersByUser(ExpertsInfo.UserId);
+				});
+
+				//阻尼系数、初始化刷新加载更多
+				var deceleration = mui.os.ios ? 0.003 : 0.0009;
+				mui('.mui-scroll-wrapper').scroll({
+					bounce: false,
+					indicators: true, //是否显示滚动条
+					deceleration: deceleration
 				});
 
 				//上拉下拉注册
@@ -80,7 +88,7 @@
 							if(pageIndex <= totalPageCount) {
 								//24.获取某个用户的回答列表
 								getAnswersByUser(ExpertsInfo.UserId);
-							}else{
+							} else {
 								mui.toast('没有更多了');
 							}
 							setTimeout(function() {
@@ -114,9 +122,9 @@
 						//总页数
 						totalPageCount = data.RspData.TotalPage;
 						pageIndex++;
-						if (flagRef == 0) {//刷新
+						if(flagRef == 0) { //刷新
 							answerArray = data.RspData.Data;
-						} else{//加载更多
+						} else { //加载更多
 							//合并数组
 							answerArray = answerArray.concat(data.RspData.Data);
 						}
