--- a/JiaoBaoYun-hb/html/mine/apply-group.html
+++ b/JiaoBaoYun-hb/html/mine/apply-group.html
@@ -57,7 +57,7 @@
 						<input id="check-stu" name="checkbox1" type="radio" value="3">
 						<label>学生</label>
 					</div>
-					<textarea id="extra-input" class="extra-input" placeholder="请输入备注信息"></textarea>
+					<textarea id="extra-input" class="extra-input" placeholder="请输入备注信息，最多20字"></textarea>
 					<div class="buttons">
 						<!--确定按钮-->
 						<button id="btn-sure" type="button" class="mui-btn mui-btn-green btn-sure">确认</button>
