--- a/JiaoBaoYun-hb/html/mine/edit-info.html
+++ b/JiaoBaoYun-hb/html/mine/edit-info.html
@@ -22,6 +22,7 @@
 		</div>
 
 		<script src="../../js/mui.min.js"></script>
+		<script src="../../js/utils/events.js"></script>
 		<script src="../../js/storageKeyName.js"></script>
 		<script src="../../js/libs/myStorage/myStorage.js"></script>
 		<script src="../../js/publicProtocol.js"></script>
@@ -29,6 +30,7 @@
 		<script type="text/javascript">
 			mui.init()
 			mui.plusReady(function() {
+				events.blurBack();
 				var pInfo = myStorage.getItem(storageKeyName.PERSONALINFO);
 				var curPage = plus.webview.currentWebview();
 				var title = document.getElementById('title');
