--- a/JiaoBaoYun-hb/html/cloud/storage_upload_choose.html
+++ b/JiaoBaoYun-hb/html/cloud/storage_upload_choose.html
@@ -225,36 +225,15 @@
 							var wd = events.showWaiting('处理中...');
 							console.log('拍照成功,图片的路径为：' + capturedFile);
 							//压缩图片并且在新页面显示压缩后的图片
-							compress.compressImageTo_1MB(capturedFile, capturedFile, function(target) {
-								getFile(target);
+							compress.compressImageTo_1MB({
+								path: capturedFile,
+								dst: capturedFile
+							}, function(event) {
+								getFile(event.target);
 								wd.close();
 							}, function(error) {
 								wd.close();
 							});
-							//							plus.zip.compressImage({
-							//									src: capturedFile, //压缩转换原始图片的路径
-							//									dst: capturedFile, //压缩转换目标图片的路径
-							//									overwrite: true, //覆盖生成新文件,仅在dst制定的路径文件存在时有效
-							//								},
-							//								function(event) {
-							//									//图片压缩成功
-							//									var target = event.target; // 压缩转换后的图片url路径，以"file://"开头
-							//									var size = event.size; // 压缩转换后图片的大小，单位为字节（Byte）
-							//									var width = event.width; // 压缩转换后图片的实际宽度，单位为px
-							//									var height = event.height; // 压缩转换后图片的实际高度，单位为px
-							//									console.log('压缩图片成功---target:' + target + '|size:' + AndroidFileSystem.readSize(size) + '|width:' + width + '|height:' + height);
-							//									//openImage(target); //打开新页面查看图片
-							//									getFile(target);
-							//								},
-							//								function(error) {
-							//									//图片压缩失败
-							//									var code = error.code; // 错误编码
-							//									var message = error.message; // 错误描述信息
-							//									mui.toast('图片压缩失败！' + '错误编码：' + code + '描述信息：' + message);
-							//									console.log('图片压缩失败！' + JSON.stringify(error));
-							//								}
-							//							);
-
 						},
 						function(error) {
 							// 拍照失败的回调
@@ -288,8 +267,8 @@
 						console.log('从相册选取图片成功,图片的路径为：' + file);
 						var myDate = new Date();
 						var dst = '_documents/' + myDate.getTime() + '.png';
-						compress.compressImageTo_1MB(file, dst, function(target) {
-							getFile(target);
+						compress.compressImageTo_1MB(file, dst, function(event) {
+							getFile(event.target);
 							wd.close();
 						}, function(error) {
 							wd.close();
