--- a/JiaoBaoYun-hb/html/qiuzhi/atExpert.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/atExpert.html
@@ -79,7 +79,7 @@
 				for(var i = 0; i < box.length; i++) {
 					console.log(datasource[i].UserId+"------"+selectedExpert)
 					for(var j=0;j<selectedExpert.length;j++)
-					if(datasource[i].TabId == selectedExpert[j]) {
+					if(datasource[i].UserId == selectedExpert[j]) {
 						box[i].checked = true;
 					}
 
