--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-newQ.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-newQ.html
@@ -91,7 +91,7 @@
 					var tempArr = data.detail.data;
 					var name = []
 					for(var i = 0; i < tempArr.length; i++) {
-						selectedExpert.push(tempArr[i].TabId)
+						selectedExpert.push(tempArr[i].UserId)
 						name.push('@' + tempArr[i].unick);
 					}
 					console.log(JSON.stringify(selectedExpert));
