--- a/JiaoBaoYun-hb/html/cloud/keeprecord_callorrecord_main.html
+++ b/JiaoBaoYun-hb/html/cloud/keeprecord_callorrecord_main.html
@@ -16,7 +16,7 @@
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-			<h1 class="mui-title" style="color: white;">1234</h1>
+			<h1 class="mui-title" style="color: white;"></h1>
 			<div id="commit" class="mui-pull-right" style="font-size: 17px;line-height: 44px;position: absolute;right: 10px;padding: 0px;font-weight: 500;color: gray;">完成</div>
 		</header>
 		<div class="mui-content">
