--- a/JiaoBaoYun-hb/html/cloud/record_student_add.html
+++ b/JiaoBaoYun-hb/html/cloud/record_student_add.html
@@ -58,6 +58,7 @@
 		<script type="text/javascript" src="../../js/storageKeyName.js"></script>
 		<script type="text/javascript" src="../../js/mui.zoom.js"></script>
 		<script type="text/javascript" src="../../js/mui.previewimage.js"></script>
+		<script type="text/javascript" src="../../js/utils/compress.js"></script>
 
 		<script type="text/javascript">
 			mui.init();
@@ -74,9 +75,12 @@
 				console.log('从父页面获取的数据:' + JSON.stringify(mainData));
 				document.getElementById("title").innerText = mainData.data.StudentName;
 				textArea = document.getElementById("textarea_record");
+				var personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid;
+
 				//---从父页面获取数据---end---
 				multiMedia = MultiMedia.multiMedia({
 					MultiMediaId: 'MultiMedia', //存放多媒体对象控件的id
+					Key: personalUTID, //utid
 					Picture: true, //是否显示图片图标
 					Audio: true, //是否显示音频图标
 					TotalPicture: 9, //图片的个数
@@ -150,172 +154,128 @@
 			 * 上传文件
 			 */
 			function uploadFile(wd) {
-				compressImage(function(pathArray) {
-					var getUpTokenUrl = window.storageKeyName.QNGETUPTOKENFILE; //获取token路径
-					var mainSpace = window.storageKeyName.QNPUBSPACE; //公开空间
-					var uploadSpace = window.storageKeyName.RECORD; //记事空间
-					var getToken = {
-						type: '2', //str 必填 获取上传token的类型。0上传需要生成缩略图的文件；1上传文件；2上传需要生成缩略图的多个文件
-						appId: 6, //int 必填 项目id
-						fileArray: pathArray, //array 选填  type为2时有效，多个文件的路径
-						mainSpace: mainSpace, //str 必填 文件存放在私有空间或公有空间
-						uploadSpace: uploadSpace, //str 必填  上传的空间
-					}
+				var pathArray = []
+				for(var i = 0; i < multiMedia.data.PictureArray.length; i++) {
+					pathArray.push(multiMedia.data.PictureArray[i].path);
+				}
+				var getUpTokenUrl = window.storageKeyName.QNGETUPTOKENFILE; //获取token路径
+				var mainSpace = window.storageKeyName.QNPUBSPACE; //公开空间
+				var uploadSpace = window.storageKeyName.RECORD; //记事空间
+				var getToken = {
+					type: '2', //str 必填 获取上传token的类型。0上传需要生成缩略图的文件；1上传文件；2上传需要生成缩略图的多个文件
+					appId: 6, //int 必填 项目id
+					fileArray: pathArray, //array 选填  type为2时有效，多个文件的路径
+					mainSpace: mainSpace, //str 必填 文件存放在私有空间或公有空间
+					uploadSpace: uploadSpace, //str 必填  上传的空间
+				}
 
-					var uploadNum = pathArray.length; //记录上传的次数
-					var uploadErrorNum = 0; //上传失败的次数
-					var encAddr = []; //附件地址
-					var encImg = []; //附件缩略图地址
-					CloudFileUtil.getQNUpToken(getUpTokenUrl, getToken, function(data) {
-						var QNUptoken = data.data; //token数据
-						var configure = data.configure; //获取token的配置信息
-						console.log('七牛上传凭证:' + JSON.stringify(QNUptoken));
-						console.log('七牛配置信息:' + JSON.stringify(configure));
-						if(QNUptoken.Status == 0) { //失败
-							mui.toast('获取上传凭证失败 ' + QNUptoken.Message);
-							console.log('### ERROR ### 请求上传凭证失败 ' + QNUptoken.Message);
-							wd.close();
-						} else {
-							console.log('获取上传凭证成功');
-							//记录图片和缩略图地址
-							for(var j = 0; j < multiMedia.data.PictureArray.length; j++) {
-								for(var i = 0; i < QNUptoken.Data.length; i++) {
-									//console.log(JSON.stringify(QNUptoken.Data[i]));
-									var filePath = QNUptoken.Data[i].P_Key.split("/");
-									var fileName = filePath[filePath.length - 1];
-									var fileId = fileName.split("_")[0];
-									if(multiMedia.data.PictureArray[j].id == fileId) {
-										multiMedia.data.PictureArray[j].domain = QNUptoken.Data[i].Domain + QNUptoken.Data[i].Key;
-										multiMedia.data.PictureArray[j].thumb = QNUptoken.Data[i].OtherKey[configure.thumbKey[i]];
-										pathList.push(multiMedia.data.PictureArray[j].domain);
-										pathList.push(multiMedia.data.PictureArray[j].thumb);
-										encAddr.push(multiMedia.data.PictureArray[j].domain);
-										encImg.push(multiMedia.data.PictureArray[j].thumb);
-									}
-								}
-							}
-
+				var uploadNum = pathArray.length; //记录上传的次数
+				var uploadErrorNum = 0; //上传失败的次数
+				var encAddr = []; //附件地址
+				var encImg = []; //附件缩略图地址
+				CloudFileUtil.getQNUpToken(getUpTokenUrl, getToken, function(data) {
+					var QNUptoken = data.data; //token数据
+					var configure = data.configure; //获取token的配置信息
+					console.log('七牛上传凭证:' + JSON.stringify(QNUptoken));
+					console.log('七牛配置信息:' + JSON.stringify(configure));
+					if(QNUptoken.Status == 0) { //失败
+						mui.toast('获取上传凭证失败 ' + QNUptoken.Message);
+						console.log('### ERROR ### 请求上传凭证失败 ' + QNUptoken.Message);
+						wd.close();
+					} else {
+						console.log('获取上传凭证成功');
+						//记录图片和缩略图地址
+						for(var j = 0; j < multiMedia.data.PictureArray.length; j++) {
 							for(var i = 0; i < QNUptoken.Data.length; i++) {
+								//console.log(JSON.stringify(QNUptoken.Data[i]));
 								var filePath = QNUptoken.Data[i].P_Key.split("/");
 								var fileName = filePath[filePath.length - 1];
-								//获取路径
-								var fPath = '';
-								for(var k = 0; k < pathArray.length; k++) {
-									var path = pathArray[k].split("/");
-									var name = path[path.length - 1];
-									if(fileName == name) {
-										fPath = pathArray[k];
-									}
+								var fileId = fileName.split("_")[0];
+								if(multiMedia.data.PictureArray[j].id == fileId) {
+									multiMedia.data.PictureArray[j].domain = QNUptoken.Data[i].Domain + QNUptoken.Data[i].Key;
+									multiMedia.data.PictureArray[j].thumb = QNUptoken.Data[i].OtherKey[configure.thumbKey[i]];
+									pathList.push(multiMedia.data.PictureArray[j].domain);
+									pathList.push(multiMedia.data.PictureArray[j].thumb);
+									encAddr.push(multiMedia.data.PictureArray[j].domain);
+									encImg.push(multiMedia.data.PictureArray[j].thumb);
 								}
-								CloudFileUtil.upload(fPath, QNUptoken.Data[i].Token, QNUptoken.Data[i].Key, function(upload, status) {
-									//上传任务完成的监听
-									console.log('上传任务完成' + status + '|' + JSON.stringify(upload));
-									if(status == 200) {
-										console.log('上传成功');
-										uploadNum--;
-										if(uploadNum == 0) {
-											console.log('所有上传都成功');
-											var encAddrStr = encAddr.join('|');
-											var encImgrStr = encImg.join('|');
-											addRecorc(wd, '1', encAddrStr, encImgrStr);
-										}
-									} else {
-										uploadErrorNum++;
-									}
-									if((uploadNum != 0 || uploadErrorNum != 0) && (uploadNum - uploadErrorNum) == 0) {
-										mui.toast('上传失败');
-										console.log('上传失败');
-										if(pathList.length != 0) {
-											BatchDelete(pathList);
-										}
-										wd.close();
-									}
-								}, function(upload, status) {
-									var id = upload.__UUID__;
-									var uploadedSize = AndroidFileSystem.readSize(upload.uploadedSize);
-									var totalSize = AndroidFileSystem.readSize(upload.totalSize);
-									var uploadState = upload.state;
-									switch(uploadState) {
-										case 0: //上传任务开始调度
-											console.log('上传任务开始调度:|id:' + id + '|uploadState:' + uploadState);
-											break;
-										case 1: //上传任务开始请求
-											console.log('上传任务开始请求:|id:' + id + '|uploadState:' + uploadState);
-											break;
-										case 2: //上传任务请求已经建立
-											console.log('上传任务请求已经建立:|id:' + id + '|uploadState:' + uploadState);
-											break;
-										case 3: //上传任务提交数据
-											//console.log('上传任务状态监听:|id:' + id + '|uploadedSize:' + uploadedSize + '|totalSize:' + totalSize + '|uploadState:' + uploadState);
-											break;
-										case 4: //上传任务已完成
-											console.log('上传任务已完成:|id:' + id + '|uploadState:' + uploadState);
-											break;
-										case 5: //上传任务已暂停
-											console.log('上传任务已暂停:|id:' + id + '|uploadState:' + uploadState);
-											break;
-										default:
-											console.log('上传任务状态监听:其他状态' + uploadState);
-											break;
-									}
-								}, function(task) {
-									//上传任务创建成功的回调
-									task.start();
-								});
 							}
 						}
-					}, function(xhr, type, errorThrown) {
-						mui.toast('请求上传凭证失败 ' + type);
-						console.log('请求上传凭证失败 ' + type);
-						wd.close();
-					});
-				}, function() {
+						wd.setTitle('上传中...');
+						for(var i = 0; i < QNUptoken.Data.length; i++) {
+							var filePath = QNUptoken.Data[i].P_Key.split("/");
+							var fileName = filePath[filePath.length - 1];
+							//获取路径
+							var fPath = '';
+							for(var k = 0; k < pathArray.length; k++) {
+								var path = pathArray[k].split("/");
+								var name = path[path.length - 1];
+								if(fileName == name) {
+									fPath = pathArray[k];
+								}
+							}
+							CloudFileUtil.upload(fPath, QNUptoken.Data[i].Token, QNUptoken.Data[i].Key, function(upload, status) {
+								//上传任务完成的监听
+								console.log('上传任务完成' + status + '|' + JSON.stringify(upload));
+								if(status == 200) {
+									console.log('上传成功');
+									uploadNum--;
+									if(uploadNum == 0) {
+										console.log('所有上传都成功');
+										var encAddrStr = encAddr.join('|');
+										var encImgrStr = encImg.join('|');
+										addRecorc(wd, '1', encAddrStr, encImgrStr);
+									}
+								} else {
+									uploadErrorNum++;
+								}
+								if((uploadNum != 0 || uploadErrorNum != 0) && (uploadNum - uploadErrorNum) == 0) {
+									mui.toast('上传失败');
+									console.log('上传失败');
+									if(pathList.length != 0) {
+										BatchDelete(pathList);
+									}
+									wd.close();
+								}
+							}, function(upload, status) {
+								var id = upload.__UUID__;
+								var uploadedSize = AndroidFileSystem.readSize(upload.uploadedSize);
+								var totalSize = AndroidFileSystem.readSize(upload.totalSize);
+								var uploadState = upload.state;
+								switch(uploadState) {
+									case 0: //上传任务开始调度
+										console.log('上传任务开始调度:|id:' + id + '|uploadState:' + uploadState);
+										break;
+									case 1: //上传任务开始请求
+										console.log('上传任务开始请求:|id:' + id + '|uploadState:' + uploadState);
+										break;
+									case 2: //上传任务请求已经建立
+										console.log('上传任务请求已经建立:|id:' + id + '|uploadState:' + uploadState);
+										break;
+									case 3: //上传任务提交数据
+										//console.log('上传任务状态监听:|id:' + id + '|uploadedSize:' + uploadedSize + '|totalSize:' + totalSize + '|uploadState:' + uploadState);
+										break;
+									case 4: //上传任务已完成
+										console.log('上传任务已完成:|id:' + id + '|uploadState:' + uploadState);
+										break;
+									case 5: //上传任务已暂停
+										console.log('上传任务已暂停:|id:' + id + '|uploadState:' + uploadState);
+										break;
+									default:
+										console.log('上传任务状态监听:其他状态' + uploadState);
+										break;
+								}
+							}, function(task) {
+								//上传任务创建成功的回调
+								task.start();
+							});
+						}
+					}
+				}, function(xhr, type, errorThrown) {
+					mui.toast('请求上传凭证失败 ' + type);
+					console.log('请求上传凭证失败 ' + type);
 					wd.close();
 				});
-			}
-
-			/**
-			 * 压缩图片
-			 * @param {Object} successCallBack 成功的回调
-			 * @param {Object} errorCallBack 失败的回调
-			 */
-			function compressImage(successCallBack, errorCallBack) {
-				var pathArray = [];
-				for(var i = 0; i < multiMedia.data.PictureArray.length; i++) {
-					//console.log(JSON.stringify(multiMedia.data.PictureArray[i]));
-					var personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid;
-
-					var myDate = new Date();
-					var fileName = multiMedia.data.PictureArray[i].id + '_' + myDate.getTime() + personalUTID + (Math.floor(Math.random() * 10)) + '.png';
-
-					plus.zip.compressImage({
-							src: multiMedia.data.PictureArray[i].path, //压缩转换原始图片的路径
-							dst: '_documents/' + fileName, //压缩转换目标图片的路径
-							overwrite: true, //覆盖生成新文件,仅在dst制定的路径文件存在时有效
-							format: '.png'
-						},
-						function(event) {
-							//图片压缩成功
-							var target = event.target; // 压缩转换后的图片url路径，以"file://"开头
-							var size = event.size; // 压缩转换后图片的大小，单位为字节（Byte）
-							var width = event.width; // 压缩转换后图片的实际宽度，单位为px
-							var height = event.height; // 压缩转换后图片的实际高度，单位为px
-							//console.log('压缩图片成功---target:' + target + '|size:' + AndroidFileSystem.readSize(size) + '|width:' + width + '|height:' + height);
-							pathArray.push(target);
-							if(pathArray.length == multiMedia.data.PictureArray.length) {
-								successCallBack(pathArray);
-							}
-						},
-						function(error) {
-							//图片压缩失败
-							var code = error.code; // 错误编码
-							var message = error.message; // 错误描述信息
-							mui.toast('图片压缩失败 ' + '错误编码 ' + code + '描述信息 ' + message);
-							console.log('### ERROR ### 图片压缩失败 ' + JSON.stringify(error));
-							errorCallBack();
-						}
-					);
-				}
 			}
 
 			/**
