--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-answerDetailSub.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-answerDetailSub.html
@@ -35,7 +35,7 @@
 						<h5 id="anthor-name" class="anthor-name single-line"></h5>
 						<p id="anthor-info" class="anthor-intro single-line"></p>
 					</div>
-					<button id="btn-focus" type="button" class="mui-btn mui-pull-right btn-attention">关注</button>
+					<button id="btn-focus" type="button" class="mui-btn mui-pull-right btn-attention" style="width: 55px;height: 28px;">关注</button>
 				</div>
 				<!--问题控件-->
 				<div class="questionContent-container">
