--- a/JiaoBaoYun-hb/html/sciedu/sciedu_show_main.html
+++ b/JiaoBaoYun-hb/html/sciedu/sciedu_show_main.html
@@ -37,7 +37,7 @@
 				});
 				sub.addEventListener("loading", function() { //Webview窗口页面开始加载事件
 					console.log('sub loading');
-					wd.close();
+//					wd.close();
 				});
 
 				sub.addEventListener("error", function() { //Webview窗口错误事件
