--- a/JiaoBaoYun-hb/html/cloud/storage_main.html
+++ b/JiaoBaoYun-hb/html/cloud/storage_main.html
@@ -305,6 +305,7 @@
 										}
 										mui.toast('创建成功');
 										back=true;//是否允许返回
+										document.activeElement.blur();
 										mui.closePopups();
 									} else if(data.RspCode == 8) {
 										mui.toast('操作失败！已存在相同的名字');
@@ -317,6 +318,7 @@
 						} else {
 							//点击取消
 							back=true;//是否允许返回
+							document.activeElement.blur();
 						}
 					}, 'div');
 					document.querySelector('.mui-popup-input input').type = 'text';
@@ -458,6 +460,7 @@
 											});
 										});
 										back=true;//是否允许返回
+										document.activeElement.blur();
 										mui.closePopups();
 									} else if(data.RspCode == 8) {
 										mui.toast('操作失败！已存在相同的名字');
@@ -470,6 +473,7 @@
 							return false;
 						} else { //取消
 							back=true;//是否允许返回
+							document.activeElement.blur();
 						}
 					}, 'div');
 					document.querySelector('.mui-popup-input input').type = 'text';
