--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-expertAllAnswer.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-expertAllAnswer.html
@@ -10,6 +10,23 @@
 		<link href="../../css/iconfont/iconfont.css" rel="stylesheet" />
 		<link href="../../css/qiuzhi/qiuzhi-inviteAnswer.css" rel="stylesheet" />
 		<style>
+			.mui-table-view {
+				background: #F2F3F5;
+			}
+			
+			.mui-table-view li {
+				background: white;
+				margin-bottom: 5px;
+				border-bottom: #e4e4e4 solid 1px;
+				padding: 3px 0 3px 0;
+			}
+			/*赞评论时间*/
+			
+			.mui-table-cell p {
+				font-family: "楷体";
+				font-size: 1.3rem;
+				color: #B7B7B7;
+			}
 			.mui-table h4,
 			.mui-table h5,
 			.mui-table .mui-h5,
@@ -19,10 +36,15 @@
 				padding-left: 10px;
 			}
 			
+			/*问题*/
+			
 			.mui-table h4 {
+				font-family: "楷体";
+				font-size: 1.6rem;
 				line-height: 21px;
-				font-weight: 500;
+				font-weight: 510;
 				padding-left: 10px;
+				letter-spacing: 0.5px;
 			}
 			
 			.mui-table .oa-icon {
@@ -40,6 +62,10 @@
 			}
 			
 			.mui-table-cell h5 {
+				font-family: "楷体";
+				font-size: 1.5rem;
+				color: #474747;
+				line-height: 1.8rem;
 				-webkit-line-clamp: 3;
 				/*用来限制在一个块元素显示的文本的行数*/
 				display: -webkit-box;
