--- a/JiaoBaoYun-hb/html/quan/zone_main.html
+++ b/JiaoBaoYun-hb/html/quan/zone_main.html
@@ -47,7 +47,7 @@
 				'zonep_sub.html',
 				'zonep_sub.html', 
 				{
-					top: '45px',
+					top: (localStorage.getItem('StatusHeightNo') * 1 + 45) + 'px',
 					bottom: '0px',
 				},
 				{
