--- a/JiaoBaoYun-hb/html/index/mine.html
+++ b/JiaoBaoYun-hb/html/index/mine.html
@@ -105,7 +105,7 @@
 //					if(plus.os.name == 'Android') {
 //						setTimeout(function() {
 //							closeMenu();
-////						}, 1500);
+//						}, 250);
 //					} else {
 						closeMenu();
 //					}
@@ -116,13 +116,14 @@
 					var personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid; //用户id
 
 					console.log('click position:' + this.getAttribute('position'))
-					if(plus.os.name == 'Android') {
-						setTimeout(function() {
-							closeMenu();
-						}, 1500);
-					} else {
+					console.log("系统名称："+plus.os.name);
+//					if(plus.os.name == 'Android') {
+//						setTimeout(function() {
+//							closeMenu();
+//						}, 250);
+//					} else {
 						closeMenu();
-					}
+//					}
 					switch(parseInt(this.getAttribute('position'))) {
 						case 0: //群管理
 							events.openNewWindowWithData('/html/mine/qun_manage_1.html', {
@@ -152,6 +153,7 @@
 							break;
 							//积分
 						case 5:
+							mui.toast('施工中,请稍候...');
 							break;
 							//设置
 						case 6:
