--- a/JiaoBaoYun-hb/html/quan/group-pInfo.html
+++ b/JiaoBaoYun-hb/html/quan/group-pInfo.html
@@ -26,7 +26,7 @@
 			<ul class="mui-table-view">
 				<li id="person-gData" class="mui-table-view-cell">
 					<a class="mui-navigate-right">
-						<p class="info-data">资料</p>
+						<p class="info-data">账号信息</p>
 						<span id="data-info" class="mui-badge single-line">数字</span>
 					</a>
 
